# Project_Hillel

./: Гіпотеза Колатца - програмування.docx
Collatz/: CMakeLists.txt  Collatz.cpp  collatzh.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
untitled/: CMakeLists.txt  QQml.qml  st.cpp
